adds extra info for overflowing top-list